--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "canvas": "^2.9.1",
     "framer-motion": "^6.3.11",
     "konva": "^8.3.10",
@@ -18,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "^18.1.1",
+    "typescript": "^4.7.4",
     "use-image": "^1.0.12"
   }
 }
